--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,26 +1,35 @@
-name: Android CI
+name: Build Amelia Shell APK
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
-
+    name: Assemble Debug APK
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK 11
-      uses: actions/setup-java@v4
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+
+    - name: Grant execute permission to Gradle wrapper
+      run: chmod +x ./gradlew
+
+    - name: Build Debug APK
+      run: ./gradlew :app:assembleDebug --no-daemon --stacktrace
+
+    - name: Upload APK artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: amelia-shell-apk
+        path: app/build/outputs/apk/debug/app-debug.apk
